--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -5,9 +5,6 @@
 body {
 	overflow: auto;
 	margin: 0px 30px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
 
 .removedScroll {
@@ -27,5 +24,9 @@ button {
 
 	&:hover {
 		background-color: #3f3f3f;
+	}
+
+	@media screen and (max-width: 1100px) {
+		width: 250px;
 	}
 }
