mobile header and appearance

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,6 +3,11 @@
 :root {
 	--light: #fff;
 	--dark: rgb(33, 29, 29);
+
+	--light-accent: #d0c5e1;
+	--dark-accent: #3f3352;
+	--light-accent-hover: #c7b9db;
+	--dark-accent-hover: #4d4063;
 }
 
 * {
