--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,10 +4,10 @@
 	--light: #fff;
 	--dark: rgb(33, 29, 29);
 
-	--light-accent: #d0c5e1;
-	--dark-accent: #3f3352;
-	--light-accent-hover: #c7b9db;
-	--dark-accent-hover: #4d4063;
+	--light-accent: #9284b8;
+	--dark-accent: #3e197a;
+	--light-accent-hover: #a194cb;
+	--dark-accent-hover: #37166c;
 }
 
 * {
